Method to stop auto-repaint daemon to allow ImageContextProfiles to be stopped safely.
New test coverage for ICPBuilder.